# TRITON-SWMM_toolkit

./: .copier-answers.yml  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  ENVIRONMENT_SNAPSHOT.md  LICENSE  README.md  _layout_relevant_files.yaml  architecture.md  changelog.md  environment-lock.yaml  environment.yaml  justfile  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: slurm-specialist.md  snakemake-specialist.md  triton-specialist.md
.github/: ISSUE_TEMPLATE.md
docs/: _work.ipynb  conf.py  diagram.rst  index.md  index.rst  installation.md  installation.rst  next_action_prompt.md  processing_sim_outputs.ipynb  refactoring_plan.md  running a simulation.ipynb  tutorial_norfolk_case_study.ipynb  usage.md  usage.rst
docs/archived/: conda_activation_in_slurm_summary.md  wait_for_completion_implementation_implementation_summary.md
docs/implementation/: conda_activation_in_slurm_fix.md  examples_refactor_plan.md  examples_refactor_summary.md  multi_model_integration.md
docs/prompts/: refactoring_plan.md
examples/: toolkit_quickstart.ipynb
profiles/slurm/: config.yaml
scripts/experiments/: container_validation.py  synth_compute_config.py
sidecars/: sidecar_atomic_2026-05-14_1543.md  sidecar_atomic_2026-05-15_1438.md  sidecar_phase1_2026-05-11_2314.md  sidecar_phase1_2026-05-14_0806.md  sidecar_phase1_2026-05-15_1131.md  sidecar_phase2_2026-05-12_0845.md  sidecar_phase2_2026-05-15_1647.md  sidecar_phase3_2026-05-04_1011.md  sidecar_phase3_2026-05-12_2140.md  sidecar_phase3_2026-05-14_1457.md  sidecar_phase3_2026-05-15_1759.md  sidecar_phase4_2026-05-12_2210.md  sidecar_wrapup_2026-05-11_1543.md  sidecar_wrapup_2026-05-16_1707.md
sidecars/done/: sidecar_phase1_2026-04-24_0821.md  sidecar_phase2_2026-04-24_0907.md  sidecar_phase4_2026-04-27_1456.md  sidecar_phase5_2026-04-29_1332.md  sidecar_phase5_2026-04-29_2000.md  sidecar_phase6_2026-05-01_1408.md  sidecar_phase7_2026-05-01_1951.md
src/TRITON_SWMM_toolkit/: TRITON_SWMM_toolkit.py  __init__.py  case_study_catalog.py  cli.py  config.py  constants.py  examples.py  gui.py  plot.py  prepare_simulations.py  preparing_simulations.py  system_setup.py  utils.py
src/hhemt/: __init__.py  analysis.py  analysis_validation.py  case_study_catalog.py  cli.py  consolidate_workflow.py  constants.py  globus_transfer.py  log.py  platform_configs.py  plot_analysis.py  prepare_scenario_runner.py  process_simulation.py  process_timeseries_runner.py  run_simulation.py  run_simulation_runner.py  system.py  (+5 more)
tests/: __init__.py  _failing_fixture_helpers.py  conftest.py  test_04_frontier_1core_multisim.py  test_05_frontier_all_compute_configs.py  test_06_UVA_1core_multisim.py  test_TRITON_SWMM_toolkit.py  test_UVA_01_1core_multisim.py  test_UVA_02_1core_multisim_e2e.py  test_UVA_03_micro_multiCPU_sensitivity_analysis.py  test_UVA_03_multiCPU_sensitivity_analysis.py  test_UVA_03_sensitivity_analysis_with_snakemake.py  test_UVA_04_multiCPU_sensitivity_analysis_minirun.py  test_UVA_04_multiCPU_sensitivity_analysis_reduced_simtimes.py  test_case_study_catalog.py  test_frontier_01_1core_multisim.py  test_frontier_02_all_compute_configs.py  test_frontier_03_snakemake_multisim_CPU.py  test_frontier_04_snakemake_multisim_GPU.py  test_frontier_04_snakemake_sensitivity_analysis.py  test_frontier_05_snakemake_sensitivity_analysis_CPU.py  test_globus_config.py  test_profile_catalog.py  test_sensitivity_allocation_tolerance.py  test_sensitivity_datatree.py  test_synth_04_multisim_with_snakemake.py  test_synth_05_sensitivity_analysis_with_snakemake.py  test_validation.py  test_workflow_1job_sbatch_generation.py  test_workflow_restart_times_profile.py  test_workflow_single_job_wait.py  test_workflow_snakefile_byte_identity.py
(+74 files in other folders)
