[project]
name = "TRITON-SWMM_toolkit"
version = "0.1.0"
description = "Tools for running and processing TRITON-SWMM models."
readme = "README.md"
authors = [
  {name = "Daniel Lassiter", email = "daniel.lassiter@outlook.com"}
]
maintainers = [
  {name = "Daniel Lassiter", email = "daniel.lassiter@outlook.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
]

[project.urls]
bugs = "https://github.com/lassiterdc/TRITON_SWMM_toolkit/issues"
changelog = "https://github.com/lassiterdc/TRITON_SWMM_toolkit/blob/master/changelog.md"
homepage = "https://github.com/lassiterdc/TRITON_SWMM_toolkit"

[project.scripts]
TRITON_SWMM_toolkit = "TRITON_SWMM_toolkit.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true

[tool.esbonio.sphinx]
buildCommand = ["sphinx-build", "-b", "html", "docs", "docs/_build"]
pythonCommand = ["C:\\Users\\Daniel\\anaconda3\\envs\\FloodAttribution\\python.exe"]

[tool.setuptools.package-data]
your_package = [
    "examples/*.yaml",
    "examples/*.md",
    "examples/*.xlsx",
    "examples/*.csv"
]